# markscout

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  REQUIREMENTS.md  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.rvry/sessions/: 20260324-1844-deepthink-i-m-building-markscout-a-local-only-macos-tauri-ap.md
docs/: GUIDE.md  PLAN.md  RESEARCH.md
icons/Untitled.icon/: icon.json
icons/markscout.icon/: icon.json
ios/: project.yml
ios/MarkScout.xcodeproj/: project.pbxproj
ios/MarkScout/Resources/: reader.css  reader.html
ios/MarkScout/Services/: MarkdownRenderer.swift  SyncFolderManager.swift
ios/MarkScout/Views/: FileDetailView.swift  FileListView.swift  SettingsView.swift
macos/: .gitignore  forge.config.ts  package-lock.json  package.json  tsconfig.json
macos/electron/: main.ts  menu.ts  preload.ts  updater.ts
macos/resources/: icon.icns
macos/scripts/: prepare-resources.sh
src/: App.tsx  instrumentation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs  types.rs  watcher.rs
src-tauri/src/commands/: collections.rs  mod.rs  preferences.rs  session.rs  state_cmds.rs  system.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppShell.tsx  CollectionsView.tsx  FavoritesView.tsx  FileItem.tsx  MarkdownPreview.tsx  PreferencesPanel.tsx  RecentsView.tsx  Sidebar.tsx  StatusBar.tsx  WhatsNewView.tsx
src/lib/: api.ts  filters.ts  hash.ts  presets.ts  projectColors.ts  state.ts  types.ts  watcher.ts
src/styles/: globals.css
(+20 files in other folders)
