[package]
name = "markscout"
version = "0.6.5"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-full = "0.4"
sha2 = "0.10"
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1"
dashmap = "6"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "markscout_lib"
crate-type = ["lib", "cdylib", "staticlib"]
